--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,2 +1,8 @@
 <br />
 <h1>Hi Grams!</h1>
+
+<% @grams.each do |gram| %>
+  <div>
+    <h1><%= link_to gram.message, gram_path(gram) %></h1><br />
+  </div>
+<% end %>
