Adding a destroy with TDD tests

--- a/app/views/grams/show.html.erb
+++ b/app/views/grams/show.html.erb
@@ -6,5 +6,6 @@
  
   <div class="pull-right">
     <%= link_to 'Edit', edit_gram_path(@gram), class: 'btn btn-primary' %>
+    <%= link_to 'Destroy', gram_path(@gram), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
   </div>
 </div>
