--- a/app/views/grams/show.html.erb
+++ b/app/views/grams/show.html.erb
@@ -2,6 +2,8 @@
 <!-- following Nomster lesson 22 -->
 
 <div>
+	<p> trying to show the picture </p>
+  <p> <%= image_tag @gram.picture, :class => "show-edit-width" %></p>
   <h1><%= @gram.message %></h1>
  
   <div class="pull-right">
