getting all 3 tests to pass for tdd for comments

--- a/app/views/grams/show.html.erb
+++ b/app/views/grams/show.html.erb
@@ -12,13 +12,8 @@
   </div>
 </div>
 <div class="clear"></div>
-<div>
-	<%= simple_form_for @comment, url: gram_comments_path(@gram) do |f| %>
-	  <%= f.input :message %>
-	  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-	<% end %>
-</div>
 
+<div>
 <h1>Comments</h1>
 
 <% @gram.comments.each do |comment| %>
@@ -29,3 +24,11 @@
     </blockquote>
   </div>
 <% end %>
+</div>
+<div class="clear"></div>
+<div>
+	<%= simple_form_for @comment, url: gram_comments_path(@gram) do |f| %>
+	  <%= f.input :message %>
+	  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+	<% end %>
+</div>
