--- a/app/views/grams/edit.html.erb
+++ b/app/views/grams/edit.html.erb
@@ -1,7 +1,9 @@
-<h1>Edit Your Gram!!!!!</h1>
-<p> <%= image_tag @gram.picture, :class => "show-edit-width" %> </p>
-<%= simple_form_for @gram do |f| %>
-  <%= f.input :picture, input_html: { class: "" } %>
-  <%= f.input :message %>
-  <%= f.submit "Update!", class: 'btn btn-primary' %>
-<% end %>
+<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 card form">
+	<h1>Edit Your Gram!!!!!</h1>
+	<p> <%= image_tag @gram.picture, :class => "show-edit-width" %> </p>
+	<%= simple_form_for @gram do |f| %>
+	  <%= f.input :message %>
+	  <%= f.input :picture, input_html: { class: "" } %>
+	  <%= f.submit "Update!", class: 'my-btn' %>
+	<% end %>
+</div>
