--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,11 +1,42 @@
-<br />
-<h1>Hi Grams!</h1>
 
+<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
 <% @grams.each do |gram| %>
-  <div>
-  	<% if gram.picture != nil %>
-  		<p> <%= image_tag gram.picture, :class => "index-width" %> </p>
+  <div class="card">
+  	<div class="handle">
+  	<% if gram.user != nil %>	
+  		<%= gram.user.email %>
   	<% end %>
-    <h1> <%= link_to gram.message, gram_path(gram) %> </h1> <br />
+  	</div>
+  	<% if gram.picture != nil %>
+  		<p> <%= image_tag gram.picture, class: 'img-responsive' %> </p>
+  	<% end %>
+    <h3 class="message"> <%= link_to gram.message, gram_path(gram) %> </h3> 
+    <div class="gram-actions pull-right">
+      <% if current_user && current_user == gram.user %>
+        <%= link_to 'Edit', edit_gram_path(gram) %>
+        <%= link_to 'Destroy', gram_path(gram), method: :delete, data: {confirm: 'Are you sure?'} %>
+      <% end %>
+    </div>
+    <br class="clear-fix" />
+
+    <div class="comments">
+      <h3>Comments</h3>
+           <% gram.comments.each do |comment| %>
+          <div class="comment">
+            <span class="comment_handle">
+              <%= comment.user.email %>
+            </span>
+            
+            <%= comment.message %>
+          </div>
+        <% end %>  
+      <h4>Add a comment</h4>
+      <%= simple_form_for Comment.new, url: gram_comments_path(gram) do |f| %>
+        <%= f.input :message %>
+        <%= f.submit 'Add Comment', class: 'my-btn' %>
+      <% end %>
+    </div>
+
   </div>
 <% end %>
+</div>>
