--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,7 +1,11 @@
-<h1>Enter Your Gram Form Things Here</h1>
+<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 card form">
+
+<h1>New Gram!</h1>
 
 <%= simple_form_for @gram do |f| %>
   <%= f.input :picture, input_html: { class: "" } %>
   <%= f.input :message, input_html: { class: "" }%>
-  <%= f.submit "Post!", class: 'btn btn-primary' %>
+  <%= f.submit "Post!", class: 'my-btn' %>
 <% end %>
+
+</div>
